# SimpleHTTPServer

./: Makefile.am  Makefile.in  README.md  configure  configure.in
src/: client.c  server.c
